--- a/Apester/Main.storyboard
+++ b/Apester/Main.storyboard
@@ -180,8 +180,8 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="oXn-ea-6sv" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="blackTranslucent" largeTitles="YES" id="y7p-kr-UjG">
-                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="blackTranslucent" id="y7p-kr-UjG">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -213,23 +213,63 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ihB-7R-J5W">
-                                <rect key="frame" x="0.0" y="116" width="375" height="128"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="nOg-DX-jNQ"/>
-                                </constraints>
-                            </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Lq0-op-lId">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NNR-EA-UZs">
+                                    <size key="itemSize" width="375" height="200"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DefaultReuseIdentifier" id="h96-RK-0fv">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ReuseIdentifier" id="ZlC-Np-5R3" customClass="APEStripCollectionViewCell" customModule="Apester" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="210" width="375" height="200"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zuU-Gi-zIg">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                                                </view>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="zuU-Gi-zIg" secondAttribute="bottom" id="DLF-Mz-wjE"/>
+                                            <constraint firstItem="zuU-Gi-zIg" firstAttribute="top" secondItem="ZlC-Np-5R3" secondAttribute="top" id="OAa-kJ-hfa"/>
+                                            <constraint firstItem="zuU-Gi-zIg" firstAttribute="leading" secondItem="ZlC-Np-5R3" secondAttribute="leading" id="jHw-FI-45T"/>
+                                            <constraint firstAttribute="trailing" secondItem="zuU-Gi-zIg" secondAttribute="trailing" id="lOs-aH-rKe"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="containerView" destination="zuU-Gi-zIg" id="WSM-Yj-ls6"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="fOt-2H-GaU" id="AUx-xL-EIm"/>
+                                    <outlet property="delegate" destination="fOt-2H-GaU" id="VbN-S2-Nwb"/>
+                                </connections>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="ihB-7R-J5W" firstAttribute="leading" secondItem="ben-VV-yfm" secondAttribute="leading" id="BxH-XC-Cf0"/>
-                            <constraint firstAttribute="trailing" secondItem="ihB-7R-J5W" secondAttribute="trailing" id="Hbr-qX-LMf"/>
-                            <constraint firstItem="ihB-7R-J5W" firstAttribute="top" secondItem="ZL4-IJ-CHq" secondAttribute="bottom" id="y8L-ak-dqs"/>
+                            <constraint firstItem="dkN-SG-8z9" firstAttribute="top" secondItem="Lq0-op-lId" secondAttribute="bottom" id="5QG-xi-LOj"/>
+                            <constraint firstItem="Lq0-op-lId" firstAttribute="leading" secondItem="ben-VV-yfm" secondAttribute="leading" id="6xY-uc-qEp"/>
+                            <constraint firstAttribute="trailing" secondItem="Lq0-op-lId" secondAttribute="trailing" id="qqj-kN-fMh"/>
+                            <constraint firstItem="Lq0-op-lId" firstAttribute="top" secondItem="ZL4-IJ-CHq" secondAttribute="bottom" id="sTC-Vl-i5b"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="containerView" destination="ihB-7R-J5W" id="JhB-eP-SNI"/>
+                        <outlet property="collectionView" destination="Lq0-op-lId" id="Zgm-iU-eGA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NJ9-nH-Dfx" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -249,7 +289,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1uh-Lx-CHo">
-                                <rect key="frame" x="0.0" y="116" width="375" height="128"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="128"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="NE8-4o-yKx"/>
