--- a/Apester/Main.storyboard
+++ b/Apester/Main.storyboard
@@ -20,26 +20,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VWw-u6-TLD">
-                                <rect key="frame" x="10" y="105" width="355" height="457"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VWw-u6-TLD">
+                                <rect key="frame" x="10" y="54" width="355" height="603"/>
                                 <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vmu-fk-Au4">
-                                <rect key="frame" x="16" y="580" width="160" height="67"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemIndigoColor"/>
-                                <state key="normal" title="refresh">
-                                    <color key="titleColor" systemColor="systemBackgroundColor"/>
-                                </state>
-                                <connections>
-                                    <action selector="refreshButton:" destination="pma-5c-gKe" eventType="touchUpInside" id="2DM-oB-UiQ"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="UCx-eN-l3Z" firstAttribute="top" secondItem="VWw-u6-TLD" secondAttribute="bottom" priority="750" constant="10" id="3uv-qL-Jn1"/>
+                            <constraint firstItem="VWw-u6-TLD" firstAttribute="leading" secondItem="kQk-Ck-MAY" secondAttribute="leading" constant="10" id="J2n-bo-gpq"/>
+                            <constraint firstAttribute="trailing" secondItem="VWw-u6-TLD" secondAttribute="trailing" constant="10" id="PZk-Y4-0cH"/>
+                            <constraint firstItem="VWw-u6-TLD" firstAttribute="top" secondItem="Tha-vb-h2l" secondAttribute="bottom" constant="10" id="n1s-Ls-3AA"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Single UnitView" id="B81-fM-OCQ"/>
+                    <navigationItem key="navigationItem" title="Single UnitView" id="B81-fM-OCQ">
+                        <barButtonItem key="rightBarButtonItem" title="Refresh" id="Gp3-xC-RMW">
+                            <connections>
+                                <action selector="refreshButton:" destination="pma-5c-gKe" id="tLA-Wr-fdf"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="unitContainerView" destination="VWw-u6-TLD" id="O9l-lX-S4Y"/>
                     </connections>
@@ -170,7 +170,7 @@
                             <outlet property="delegate" destination="LMb-PD-XyA" id="bsR-ba-g8h"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="ApesterKit" leftItemsSupplementBackButton="YES" largeTitleDisplayMode="always" id="nBi-HY-uV0"/>
+                    <navigationItem key="navigationItem" title="ApesterKit" leftItemsSupplementBackButton="YES" largeTitleDisplayMode="never" id="nBi-HY-uV0"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eEB-SW-ugs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -214,7 +214,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Lq0-op-lId">
-                                <rect key="frame" x="20" y="101" width="335" height="546"/>
+                                <rect key="frame" x="20" y="49" width="335" height="598"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NNR-EA-UZs">
                                     <size key="itemSize" width="375" height="200"/>
@@ -287,7 +287,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1uh-Lx-CHo">
-                                <rect key="frame" x="20" y="101" width="335" height="128"/>
+                                <rect key="frame" x="20" y="49" width="335" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="NE8-4o-yKx"/>
                                 </constraints>
@@ -328,7 +328,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ufo-c7-YmU">
-                                <rect key="frame" x="20" y="101" width="335" height="546"/>
+                                <rect key="frame" x="20" y="49" width="335" height="598"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="JPn-e1-hO1">
                                     <size key="itemSize" width="375" height="200"/>
@@ -402,19 +402,31 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VgY-aI-Drh">
-                                <rect key="frame" x="10" y="106" width="355" height="551"/>
+                                <rect key="frame" x="10" y="54" width="355" height="554"/>
                                 <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="VgY-aI-Drh" secondAttribute="trailing" constant="10" id="3eU-GU-P9F"/>
+                            <constraint firstItem="VBD-gN-7hp" firstAttribute="top" secondItem="VgY-aI-Drh" secondAttribute="bottom" constant="10" id="4Pf-TS-CG6"/>
+                            <constraint firstAttribute="trailing" secondItem="VgY-aI-Drh" secondAttribute="trailing" constant="10" id="7AK-rQ-imx"/>
                             <constraint firstItem="VgY-aI-Drh" firstAttribute="leading" secondItem="siT-9e-Nu7" secondAttribute="leading" constant="10" id="9aI-ns-7dE"/>
+                            <constraint firstItem="VgY-aI-Drh" firstAttribute="top" secondItem="lGv-cv-cbE" secondAttribute="bottom" constant="10" id="F9y-P5-8oN"/>
+                            <constraint firstItem="VgY-aI-Drh" firstAttribute="leading" secondItem="siT-9e-Nu7" secondAttribute="leading" constant="10" id="XaQ-IP-m9O"/>
                             <constraint firstItem="VgY-aI-Drh" firstAttribute="top" secondItem="lGv-cv-cbE" secondAttribute="bottom" constant="10" id="mVq-XT-0d4"/>
                             <constraint firstItem="VBD-gN-7hp" firstAttribute="top" secondItem="VgY-aI-Drh" secondAttribute="bottom" constant="10" id="rJf-NN-bQg"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Single UnitView" id="dgf-Kh-9C2"/>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Single UnitView" largeTitleDisplayMode="never" id="dgf-Kh-9C2">
+                        <barButtonItem key="rightBarButtonItem" title="Refresh" id="Quv-Iv-7gu">
+                            <connections>
+                                <action selector="refreshButton:" destination="oz4-xr-voD" id="2kl-E6-xAK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="containerView" destination="VgY-aI-Drh" id="g7h-ST-lAV"/>
                     </connections>
@@ -430,9 +442,6 @@
         </systemColor>
         <systemColor name="systemGroupedBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemIndigoColor">
-            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
